--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "^54.0.3",
+    "styled-components": "^6.1.19",
     "typescript": "~5.9.2"
   },
   "private": true
