--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "expo-font": "~14.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/styled-components": "^5.1.34",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.3",
-    "styled-components": "^6.1.19",
     "typescript": "~5.9.2"
   },
   "private": true
